--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg">
 <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="lion yawns at daybreak">
 <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="lion yawns at daybreak" title="Fatigue of a lion">
